plugins {
	id 'java'
	id 'application'
}

group = 'com.nova'
version = '0.1.0'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.jsoup:jsoup:1.17.2'
}

application {
	mainClass = 'com.nova.App'
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}
